Bug 1565681 - Have ruby base container sized based on margin box of ruby bases. r=jfkthame

Differential Revision: https://phabricator.services.mozilla.com/D43353

--HG--
extra : moz-landing-system : lando